# Wireless_sound_zones

./: .gitignore  .gitmodules  README.md
Client/: client_setup.sh
Client/c_soundzone_client/include/: alsadriver.h
Client/c_soundzone_client/src/: alsadriver.cpp
Client/c_soundzone_client/tests/: CMakeLists.txt
Client/c_soundzone_client/tests/test_dac/: CMakeLists.txt  test_dac.cpp
Client/soundzone_client/: readme.md  soundzone_client.py
Client/soundzone_client/tests/: test_datatransport.py  tests_recieve_send_packet.py
Measurement Report/UDP/Client/: client_setup.sh
Measurement_Report/General_Timing/: config.txt  setup_tests.sh
Measurement_Report/UDP/: Commands.txt
Målejournal/General Timing/: delay afspilning  firkant_100hz_mono_2k.raw  general_timing.py  general_timing_c.cpp  setup_tests.sh  sinus_100hz.raw  sinus_100hz_mono_2k.raw  sinus_100hz_mono_4k.raw  test_random_write_c.cpp  test_random_write_python.py
RTKernel/: Compile_RTkernel.sh  Isolate CPU core.txt
Server/: server_setup.sh
Server/Setup_files/: hostapd.conf
Server/soundzone_server/: __init__.py  readme.md  soundzone_server.py
Setup_guides/: setup_clion.md  setup_pi.md  setup_pycharm.md
shared_modules/data_transport/: __init__.py  data_transport.py  readme.md
shared_modules/soundzone_protocol/: __init__.py  readme.md  soundzone_protocol.py
soundzones_protocol/: documentation_SZP.md  readme.md  soundzone_protocol.py
soundzones_protocol/tests/: test_appl.py
test_files/: epic_sax_guy.raw  epic_sax_guy_short.raw
tests/sine_sweep/: plot_spectogram_of_wav.py
(+442 files in other folders)
